fixed long words that do not wrap

--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ fieldset{
 }
 .book-title{
   margin: 10px 20px;
+  word-break: break-all;
 }
 .book-author{
   font-style: italic;
